--- a/assets/styles/sass/00-global/fonts.scss
+++ b/assets/styles/sass/00-global/fonts.scss
@@ -1,19 +1,19 @@
 
 @font-face {
     font-family: "Montserrat";
-    src:  url("../../fonts/Montserrat-Regular.ttf");
+    src:  url("../../../fonts/Montserrat-Regular.ttf");
     font-weight: 400;
         
   }
   
 @font-face {
     font-family: "Montserrat";
-    src: url("../../fonts/Montserrat-Bold.ttf");
+    src: url("../../../fonts/Montserrat-Bold.ttf");
     font-weight: 700;
   }
 
 
 @font-face {
     font-family: "Salsa";
-    src: url("../../fonts/Salsa-Regular.ttf");
+    src: url("../../../fonts/Salsa-Regular.ttf");
   }
