--- a/assets/styles/sass/00-global/nav.scss
+++ b/assets/styles/sass/00-global/nav.scss
@@ -1,5 +1,6 @@
 
 nav{
+    top:0;
     box-sizing: border-box;
     width: 100%;
     position: fixed;
@@ -20,11 +21,14 @@ nav{
         margin-left: 15px;
         font-size:1.5rem;
         
-        h1{
-            color: white;
+        h2{
             font-family: 'Salsa';
-
-            margin: 0;
+            margin: 2px;
+            
+            a{
+                color: whitesmoke;
+                text-decoration: none;
+            }   
         }
     }
 
@@ -35,16 +39,22 @@ nav{
             padding: 0; 
 
             display: flex;
+            justify-content: space-around;
             
             li{
-                list-style: none;
-
                 color: whitesmoke;
+                list-style: none;
                 font-size: 1.1rem;
                 font-weight: 700;
 
                 margin: auto 10px;
                 padding: 8px;
+
+                a{
+                    color: inherit;
+                    text-decoration: none;
+                }
+
 
                 &:hover,&:active{
                     color: white;
@@ -58,7 +68,7 @@ nav{
                     background-color: rgba($color: #c24a64, $alpha: 1.0);
                     &:hover,&:active{
                         color: #a5304d;
-                        background-color: white;
+                        background-color: whitesmoke;
                         border-bottom: none;
                     }
                     
