--- a/assets/styles/sass/00-global/nav.scss
+++ b/assets/styles/sass/00-global/nav.scss
@@ -16,19 +16,14 @@ nav{
     align-items: center;
 
 
-    .div-brand{
-
-        margin-left: 15px;
-        font-size:1.5rem;
-        
-        h2{
-            font-family: 'Salsa';
-            margin: 2px;
-            
-            a{
-                color: whitesmoke;
-                text-decoration: none;
-            }   
+    .a-brand{
+        div{
+            margin-left: 10px;
+            width: 3rem;
+            height: 3rem;
+            background: url('../../../icons/uHost.svg') center/cover no-repeat;
+            background-size: cover;
+            background-position: center;
         }
     }
 
