--- a/assets/styles/sass/01-landing/02-header-main.scss
+++ b/assets/styles/sass/01-landing/02-header-main.scss
@@ -1,5 +1,6 @@
 
 .header-main{
+    text-align: center;
     padding-top: 40px;
     padding-left: 20px;
     background-image: url('../../../images/freedom.jpg');
@@ -8,8 +9,15 @@
     background-position: top 24% left 12%;
     height: 600px;
 
+    h1{
+        color: whitesmoke;
+        margin: 0;
+        font-family: 'Salsa';
+        font-size: 5rem;
+    }
+
     h2{
-        color: #320a3b;
+        color: whitesmoke;
         top: 150px;
         right: 300px;
         margin: 0;
