--- a/assets/styles/sass/01-landing/03-section-plans.scss
+++ b/assets/styles/sass/01-landing/03-section-plans.scss
@@ -12,14 +12,16 @@
     }
 
     .ul-plans{
+        padding-left: 25%;
+        padding-right: 25%;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: stretch;
         flex-wrap: wrap;
 
 
         &>li{   
-            background-color: #e7d39f;
+            background: linear-gradient(45deg,#fb7b6b ,#e7d39f);
             box-shadow: 5px 5px 8px black;
 
             list-style: none;
@@ -43,7 +45,7 @@
 
                     p{
                         margin: 0;
-                        color: gold;
+                        color: goldenrod;
                         font-size: .8rem;
                     }
 
@@ -70,15 +72,17 @@
             }
 
             &:hover,&:active{
-                background-color: #e2ba54;
+                background: linear-gradient(45deg,#fb7b6b 40%,#e7d39f);
                 cursor: pointer;
             }
 
             &.li-plus{
-            background-color: #fb7b6b;
+                color: whitesmoke;
+                background: linear-gradient(45deg,#522d5b 5%,#d7385e ,#fb7b6b);
 
                 &:hover,&:active{
-                    background-color: #f75944;
+                background: linear-gradient(45deg,#522d5b 40%,#d7385e ,#fb7b6b);
+
                 }
             }
         }
