--- a/assets/styles/sass/01-landing/04-section-reasons.css
+++ b/assets/styles/sass/01-landing/04-section-reasons.css
@@ -23,7 +23,7 @@
 
 .section-reasons ul {
   padding: 0;
-  width: 80%;
+  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,12 +52,20 @@
 }
 
 .section-reasons ul li div {
-  background-color: rebeccapurple;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  -webkit-box-shadow: 4px 4px 6px black;
-          box-shadow: 4px 4px 6px black;
+}
+
+.section-reasons ul li div.div-happy {
+  background: url("../../../icons/happyCustomer.svg") center/cover no-repeat;
+}
+
+.section-reasons ul li div.div-uptime {
+  background: url("../../../icons/upTime.svg") center/cover no-repeat;
+}
+
+.section-reasons ul li div.div-fast {
+  background: url("../../../icons/fast.svg") center/cover no-repeat;
 }
 
 .section-reasons ul li p {
