--- a/assets/styles/sass/00-global/nav.scss
+++ b/assets/styles/sass/00-global/nav.scss
@@ -16,8 +16,8 @@ nav{
     align-items: center;
 
 
-    .a-brand{
-        div{
+    &>.a-brand{
+        &>div{
             margin-left: 10px;
             width: 3rem;
             height: 3rem;
@@ -27,16 +27,16 @@ nav{
         }
     }
 
-    .div-nav-items{
+    &>.div-nav-items{
 
-        ul{
+        &>ul{
             margin: 0;
             padding: 0; 
 
             display: flex;
             justify-content: space-around;
             
-            li{
+            &>li{
                 color: whitesmoke;
                 list-style: none;
                 font-size: 1.1rem;
@@ -45,7 +45,7 @@ nav{
                 margin: auto 10px;
                 padding: 8px;
 
-                a{
+                &>a{
                     color: inherit;
                     text-decoration: none;
                 }
