--- a/assets/styles/sass/00-global/nav.css
+++ b/assets/styles/sass/00-global/nav.css
@@ -19,7 +19,7 @@ nav {
           align-items: center;
 }
 
-nav .a-brand div {
+nav > .a-brand > div {
   margin-left: 10px;
   width: 3rem;
   height: 3rem;
@@ -28,7 +28,7 @@ nav .a-brand div {
   background-position: center;
 }
 
-nav .div-nav-items ul {
+nav > .div-nav-items > ul {
   margin: 0;
   padding: 0;
   display: -webkit-box;
@@ -38,7 +38,7 @@ nav .div-nav-items ul {
       justify-content: space-around;
 }
 
-nav .div-nav-items ul li {
+nav > .div-nav-items > ul > li {
   color: whitesmoke;
   list-style: none;
   font-size: 1.1rem;
@@ -47,24 +47,24 @@ nav .div-nav-items ul li {
   padding: 8px;
 }
 
-nav .div-nav-items ul li a {
+nav > .div-nav-items > ul > li > a {
   color: inherit;
   text-decoration: none;
 }
 
-nav .div-nav-items ul li:hover, nav .div-nav-items ul li:active {
+nav > .div-nav-items > ul > li:hover, nav > .div-nav-items > ul > li:active {
   color: white;
   border-bottom: 2px solid white;
   cursor: pointer;
 }
 
-nav .div-nav-items ul li.li-best-option {
+nav > .div-nav-items > ul > li.li-best-option {
   border-radius: 5px;
   color: whitesmoke;
   background-color: #c24a64;
 }
 
-nav .div-nav-items ul li.li-best-option:hover, nav .div-nav-items ul li.li-best-option:active {
+nav > .div-nav-items > ul > li.li-best-option:hover, nav > .div-nav-items > ul > li.li-best-option:active {
   color: #a5304d;
   background-color: whitesmoke;
   border-bottom: none;
