--- a/assets/styles/sass/01-landing/02-header-main.css
+++ b/assets/styles/sass/01-landing/02-header-main.css
@@ -9,14 +9,14 @@
   height: 600px;
 }
 
-.header-main h1 {
+.header-main > h1 {
   color: whitesmoke;
   margin: 0;
   font-family: 'Salsa';
   font-size: 5rem;
 }
 
-.header-main h2 {
+.header-main > h2 {
   color: whitesmoke;
   top: 150px;
   right: 300px;
