--- a/assets/styles/sass/01-landing/03-section-plans.scss
+++ b/assets/styles/sass/01-landing/03-section-plans.scss
@@ -5,13 +5,13 @@
     text-align: center;
     background-color:#591568;
 
-    h1{
+    &>h2{
         margin: 0;
         font-size: 2rem;
         color: whitesmoke;
     }
 
-    .ul-plans{
+    &>.ul-plans{
         padding-left: 25%;
         padding-right: 25%;
         display: flex;
@@ -32,18 +32,19 @@
             position: relative;
 
 
-            article{
+            &>article{
                 box-sizing: border-box;
+
                 
 
-                aside{
+                &>footer{
                     padding: 3.9px;
                     background-color: #522d5b;
                     position: absolute;
                     top: 5px;
                     right: 5px;
 
-                    p{
+                    &>p{
                         margin: 0;
                         color: goldenrod;
                         font-size: .8rem;
@@ -51,19 +52,19 @@
 
                 }
 
-                .p-price{
+                &>.p-price{
                     font-size: 1.4rem;
                     font-weight: 700;
                 }
                 
 
-                ul{
+                &>ul{
                     padding: 10px;
                     display: flex;
                     flex-direction: column;
                     align-items: stretch;
                     
-                    li{
+                    &>li{
                         list-style: none;
                         margin: 5px;
                     }
