--- a/assets/styles/sass/01-landing/04-section-reasons.css
+++ b/assets/styles/sass/01-landing/04-section-reasons.css
@@ -15,13 +15,13 @@
           align-items: center;
 }
 
-.section-reasons h2 {
+.section-reasons > h2 {
   width: 60%;
   margin: 0;
   padding-top: 15px;
 }
 
-.section-reasons ul {
+.section-reasons > ul {
   padding: 0;
   width: 60%;
   display: -webkit-box;
@@ -33,7 +33,7 @@
       flex-wrap: wrap;
 }
 
-.section-reasons ul li {
+.section-reasons > ul > li {
   -ms-flex-preferred-size: 300px;
       flex-basis: 300px;
   display: -webkit-box;
@@ -51,24 +51,24 @@
   padding: 10px;
 }
 
-.section-reasons ul li div {
+.section-reasons > ul > li > div {
   width: 150px;
   height: 150px;
 }
 
-.section-reasons ul li div.div-happy {
+.section-reasons > ul > li > div.div-happy {
   background: url("../../../icons/happyCustomer.svg") center/cover no-repeat;
 }
 
-.section-reasons ul li div.div-uptime {
+.section-reasons > ul > li > div.div-uptime {
   background: url("../../../icons/upTime.svg") center/cover no-repeat;
 }
 
-.section-reasons ul li div.div-fast {
+.section-reasons > ul > li > div.div-fast {
   background: url("../../../icons/fast.svg") center/cover no-repeat;
 }
 
-.section-reasons ul li p {
+.section-reasons > ul > li > p {
   font-weight: bold;
 }
 /*# sourceMappingURL=04-section-reasons.css.map */
