--- a/assets/styles/sass/01-landing/04-section-reasons.scss
+++ b/assets/styles/sass/01-landing/04-section-reasons.scss
@@ -11,14 +11,14 @@
     flex-direction: column;
     align-items: center;
 
-    h2{
+    &>h2{
         width: 60%;
         margin: 0;
         padding-top: 15px;
         // border-top: 5px double white ;
     }
 
-    ul{
+    &>ul{
         padding: 0;
         width: 60%;
         display: flex;
@@ -26,7 +26,7 @@
         flex-wrap: wrap;
 
 
-        li{
+        &>li{
             flex-basis: 300px;
             display: flex;
             flex-direction: column;
@@ -37,7 +37,7 @@
             margin: 10px;
             padding: 10px;
 
-            div{
+            &>div{
                 width: 150px;   
                 height: 150px;
                 
@@ -57,7 +57,7 @@
             
 
             
-            p{
+            &>p{
                 font-weight: bold;
             }
 
