--- a/assets/styles/sass/02-packages/01-main.scss
+++ b/assets/styles/sass/02-packages/01-main.scss
@@ -10,7 +10,7 @@ body{
     flex-direction: column;
 
     
-    a{
+    &>a{
         text-decoration: none;
         color: white;
         background-color: #43244b;
@@ -21,9 +21,9 @@ body{
         box-shadow: 3px 3px 7px black;
 
 
-        article{
+        &>article{
            
-            h2{
+            &>h2{
                 color: goldenrod;
                 margin:0;
             }
@@ -35,16 +35,17 @@ body{
         &.a-plus{
             position: relative;
 
-            article{
+            &>article{
 
-                footer{
+                &>footer{
                     padding: 4px;
                     margin: 10px;
                     background-color: goldenrod;
                     position: absolute;
                     top: 0;
                     right: 0;
-                    p{
+                    
+                    &>p{
                         margin: 0px;
                     }
 
