--- a/assets/styles/sass/00-global/nav.scss
+++ b/assets/styles/sass/00-global/nav.scss
@@ -9,7 +9,7 @@ nav{
     background-color: #320a3b;
     color: rgba($color: #041a11, $alpha: 1.0);
 
-    padding: 10px;
+    padding: 5px;
     
     display: flex;
     justify-content: space-between;
@@ -19,8 +19,8 @@ nav{
     &>.a-brand{
         &>div{
             margin-left: 10px;
-            width: 3rem;
-            height: 3rem;
+            width: 50px;
+            height: 50px;
             background: url('../../../icons/uHost.svg') center/cover no-repeat;
             background-size: cover;
             background-position: center;
@@ -39,7 +39,7 @@ nav{
             &>li{
                 color: whitesmoke;
                 list-style: none;
-                font-size: 1.1rem;
+                font-size: 18px;
                 font-weight: 700;
 
                 margin: auto 10px;
