--- a/assets/styles/sass/01-landing/02-header-main.scss
+++ b/assets/styles/sass/01-landing/02-header-main.scss
@@ -1,27 +1,31 @@
 
 .header-main{
+    position: relative;
     text-align: center;
-    padding-top: 40px;
+    padding-top: 15px;
     padding-left: 20px;
     background-image: url('../../../images/freedom.jpg');
     background-origin: border-box;
     background-size: cover;
     background-position: top 24% left 12%;
-    height: 600px;
+    height: 550px;
 
     &>h1{
         color: whitesmoke;
         margin: 0;
         font-family: 'Salsa';
-        font-size: 5rem;
+        font-size: 80px;
     }
 
     &>h2{
+        right: 40px;
+        bottom: 50px;
+        position: absolute;
+        display: block;
         color: whitesmoke;
-        top: 150px;
-        right: 300px;
-        margin: 0;
-        font-size: 1.6rem;
+        margin:0;
+        padding-left: 40px;
+        font-size: 30px;
     }   
 
 }
