--- a/assets/styles/sass/01-landing/03-section-plans.css
+++ b/assets/styles/sass/01-landing/03-section-plans.css
@@ -12,14 +12,13 @@
 }
 
 .section-plan > .ul-plans {
-  padding-left: 25%;
-  padding-right: 25%;
+  padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
