--- a/assets/styles/sass/01-landing/03-section-plans.scss
+++ b/assets/styles/sass/01-landing/03-section-plans.scss
@@ -4,6 +4,9 @@
     padding-bottom: 20px;
     text-align: center;
     background-color:#591568;
+    // display: flex;
+    // align-items: center;
+    // flex-direction: column;
 
     &>h2{
         margin: 0;
@@ -12,13 +15,12 @@
     }
 
     &>.ul-plans{
-        padding-left: 25%;
-        padding-right: 25%;
+        // width: 80%;
+        padding: 20px;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: stretch;
         flex-wrap: wrap;
-
 
         &>li{   
             background: linear-gradient(45deg,#fb7b6b ,#e7d39f);
