--- a/assets/styles/sass/01-landing/04-section-reasons.css
+++ b/assets/styles/sass/01-landing/04-section-reasons.css
@@ -3,32 +3,21 @@
   text-align: center;
   color: white;
   background-color: #480858;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .section-reasons > h2 {
-  width: 60%;
   margin: 0;
   padding-top: 15px;
 }
 
 .section-reasons > ul {
   padding: 0;
-  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
