--- a/assets/styles/sass/01-landing/04-section-reasons.scss
+++ b/assets/styles/sass/01-landing/04-section-reasons.scss
@@ -6,23 +6,16 @@
     text-align: center;
     color: white;
     background-color: #480858;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+    
     &>h2{
-        width: 60%;
         margin: 0;
         padding-top: 15px;
-        // border-top: 5px double white ;
     }
 
     &>ul{
         padding: 0;
-        width: 60%;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         flex-wrap: wrap;
 
 
