--- a/assets/styles/sass/01-landing/04-section-reasons.css
+++ b/assets/styles/sass/01-landing/04-section-reasons.css
@@ -6,12 +6,14 @@
 }
 
 .section-reasons > h2 {
+  font-size: 24px;
   margin: 0;
   padding-top: 15px;
 }
 
 .section-reasons > ul {
   padding: 0;
+  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
