--- a/assets/styles/sass/01-landing/04-section-reasons.scss
+++ b/assets/styles/sass/01-landing/04-section-reasons.scss
@@ -6,14 +6,16 @@
     text-align: center;
     color: white;
     background-color: #480858;
-    
+
     &>h2{
+        font-size: 24px;
         margin: 0;
         padding-top: 15px;
     }
 
     &>ul{
         padding: 0;
+        margin: 0;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
