--- a/assets/styles/sass/02-packages/01-main.scss
+++ b/assets/styles/sass/02-packages/01-main.scss
@@ -24,8 +24,13 @@ body{
         &>article{
            
             &>h2{
+                font-size: 24px;
                 color: goldenrod;
                 margin:0;
+            }
+
+            &>h3{
+                font-size: 18.8px;
             }
 
 
@@ -46,6 +51,7 @@ body{
                     right: 0;
                     
                     &>p{
+                        font-size: 16px;
                         margin: 0px;
                     }
 
