--- a/assets/styles/sass/src/customers/main.scss
+++ b/assets/styles/sass/src/customers/main.scss
@@ -8,6 +8,10 @@ body{
     padding-top: 40px;
     display: flex;
     flex-direction: column;
+    @media (max-width: 902px){
+        align-items: center;
+    }
+
 
     &>article{
         background-image: linear-gradient(30deg,#3e2444,#702a81);
@@ -26,11 +30,23 @@ body{
             margin-right: 20px;
             width: 30%;
             min-width: 250px;
+            @media (max-width: 902px){
+                margin-right:0;
+                padding: 0;
+                width: 100%;
+                min-width: initial;
+            }
         }
             
         &>div{
             flex-shrink: 0;
             width: 50%;
+
+            @media (max-width: 902px){
+                margin-top: 20px;
+                width: 100%;
+
+            }
 
             &>h2{
                 font-size: 24px;
@@ -56,6 +72,11 @@ body{
         align-self: flex-end;
         text-align: right;
         flex-direction: row-reverse;
+
+        @media (max-width: 902px){
+            align-self: center;
+            text-align: left;
+        }
     }    
 
 
@@ -64,28 +85,5 @@ body{
 
 }
 
+   
 
-@media only screen and (max-width: 902px) {
-
-    .main-customers {
-        align-items: center;
-      }
-
-    .main-customers > article > img {
-        margin-right:0;
-        padding: 0;
-        width: 100%;
-        min-width: initial;
-      }
-
-    .main-customers > article > div {
-        margin-top: 20px;
-        width: 100%;
-    }
-
-    .main-customers > article.article-john-mellow {
-        align-self: center;
-        text-align: left;
-      }
-
-}
